@@ -444,11 +444,21 @@ Returns a list of diagnostic objects in JSON format."
 
 (defvar url-http-response-status)
 
-(defun gptel-tools--url-retrieve (callback url)
-  (condition-case err
-      (url-retrieve url callback)
-    (error (funcall callback (list :error "Failed to retrieve URL"
-				   :internal-error err)))))
+(defun gptel-tools--url-retrieve (callback url &optional timeout)
+  (let* ((timer nil)
+	 (cb (lambda (result)
+	       (unwind-protect
+		   (funcall callback result)
+		 (when (timerp timer)
+		   (cancel-timer timer)
+		   (setq timer nil))
+		 (setq callback nil)))))
+    (when (numberp timeout)
+      (run-at-time timeout cb (list :error "Timed out")))
+    (condition-case err
+	(url-retrieve url cb)
+      (error (funcall cb (list :error "Failed to retrieve URL"
+			       :internal-error err))))))
 
 (defun gptel-tools--read-url-async (callback url)
   "Call CALLBACK with parsed contents of URL, or (:error MESSAGE ...)."
@@ -469,7 +479,7 @@ Returns a list of diagnostic objects in JSON format."
 			  (buffer-substring-no-properties (point-min) (point-max)))))))
        (error (funcall callback (list :error "Failed to read url"
 				      :internal-error err)))))
-   url))
+   url 30))
 
 (defun gptel-tools--insert-link-strip-href (dom)
   "Insert a link from DOM element.
@@ -520,7 +530,8 @@ a relative or protocol-based URL, append the URL in parentheses."
 		 (list :error
 		       "Failed to fetch the URL"
 		       :internal-error err)))))
-   (format "https://html.duckduckgo.com/html/?q=%s" query)))
+   (format "https://html.duckduckgo.com/html/?q=%s" query)
+   30))
 
 
 (defvar gptel-tools-jira-host nil)
@@ -557,7 +568,7 @@ a relative or protocol-based URL, append the URL in parentheses."
 	       (t (kill-buffer (current-buffer)))
 	       (error (funcall callback (list :error "Failed to search issues"
 					      :internal-error err1))))))
-	 url))
+	 url 30))
     (error (funcall callback (list :error "Failed to search jira"
 				   :internal-error err)))))
 
@@ -583,7 +594,7 @@ a relative or protocol-based URL, append the URL in parentheses."
 	       (t (kill-buffer (current-buffer)))
 	       (error (funcall callback (list :error "Failed to get issue"
 					      :internal-error err1))))))
-	 url))
+	 url 30))
     (error (funcall callback (list :error "Failed to get issue"
 				   :internal-error err)))))
 
